--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
         <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Celebration Menu</a>
+        <a class="link" href="https://bit.ly/3fbv2jT" target="_blank">Celebration Menu</a>
     </div>
 
     <div class="footer">
