--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Celebration Menu</a>
-        <a class="link" href="https://bit.ly/3fbv2jT" target="_blank">Celebration Menu</a>
+        <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Truffle Season</a>
+        <a class="link" href="https://bit.ly/3fbv2jT" target="_blank">Sicilian Dinner</a>
     </div>
 
     <div class="footer">
