--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <img id="userPhoto" src="https://i.imgur.com/857rFHe.jpg" alt="User Photo">
     
-    <a href="https://www.instagram.com/ciakinthekitchen/" id="userName">@ciakalldayitalian</a>
+    <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="https://bit.ly/2xIcck3" target="_blank">foodpanda</a>
+        <a class="link" href="https://bit.ly/2S1go5d" target="_blank">foodpanda</a>
         <a class="link" href="https://bit.ly/2N2cjLj" target="_blank">Truffle Season</a>
         <a class="link" href="https://bit.ly/3fbv2jT" target="_blank">Sicilian Dinner</a>
     </div>
