--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="https://bit.ly/39WZKeW" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">foodpanda</a>
         <a class="link" href="bit.ly/2AIPGc8" target="_blank">Celebratory Menu</a>
         <a class="link" href="https://bit.ly/3fbv2jT" target="_blank">Sicilian Dinner</a>
