--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
         <a class="link" href="https://bit.ly/39WZKeW" target="_blank">#StayHome Delivery Service</a>
-        <a class="link" href="https://bit.ly/2xIcck3" target="_blank">foodpanda</a>
+        <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
+        <a class="link" href="https://bit.ly/3lhfsqc" target="_blank">OpenRice</a>
         <a class="link" href="bit.ly/2AIPGc8" target="_blank">Celebratory Menu</a>
     </div>
 
