--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="https://bit.ly/3dPbC4v" target="_blank">Veneto Wine Dinner </a>
         <a class="link" href="https://bit.ly/39WZKeW" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/3lhfsqc" target="_blank">OpenRice</a>
