--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
-        <a class="link" href="http://bit.ly/3cgroWW" target="_blank">HK Restaurant Week Booking</a>
+        <a class="link" href="https://bit.ly/3uWD7R3" target="_blank">Business Lunch Menu</a>
         <a class="link" href="https://bit.ly/3oZCgM7" target="_blank">eShop (Taikoo Shing)</a>
         <a class="link" href="https://bit.ly/39WZKeW" target="_blank">#StayHome Delivery Service</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
