--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
-        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">www.ciakconcept.com</a>
+        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Website</a>
+        <a class="link" href="https://www.ciakconcept.com/download/cityplaza/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
         <a class="link" href="https://bit.ly/35jpobz" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/3lhfsqc" target="_blank">OpenRice</a>
