--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
-        <a class="link" href="http://www.ciakconcept.com/en/" target="_blank">Website</a>
-        <a class="link" href="https://www.ciakconcept.com/download/cityplaza/CIAK-ALaCarte.pdf" target="_blank">A La Carte</a>
+        <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
+        <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
+        <a class="link" href="https://www.dropbox.com/s/01ld9i6kms9udac/CIAK%20A%20La%20Carte%20Menu.pdf?dl=0" target="_blank">A La Carte</a>
         <a class="link" href="https://www.sevenrooms.com/reservations/ciakalldayitalian" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/3lhfsqc" target="_blank">OpenRice</a>
