--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://ciakconcept.com/ciak-all-day-italian/" target="_blank">Menus</a>
-        <a class="link" href="https://bit.ly/3Op8O2u" target="_blank">Reservation</a>
+        <a class="link" href="https://bit.ly/3RgvBuU" target="_blank">Reservation</a>
         <a class="link" href="https://bit.ly/2xIcck3" target="_blank">Foodpanda</a>
         <a class="link" href="https://bit.ly/3lhfsqc" target="_blank">OpenRice</a>
 
