--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
-        <a class="link" href="http://sevn.ly/xch98L0X" target="_blank">CIAK ALL DAY ITALIAN</a>
+        <a class="link" href="http://sevn.ly/xch98L0X" target="_blank">CIAK ALL DAY ITALIAN 7TH ANNIVERSARY DINNER</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://ciakconcept.com/ciak-all-day-italian/" target="_blank">Menus</a>
         <a class="link" href="https://bit.ly/3RgvBuU" target="_blank">Reservation</a>
