--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <a href="https://www.instagram.com/ciakalldayitalian/" id="userName">@ciakalldayitalian</a>
     <div id="links">
+        <a class="link" href="https://bit.ly/3ssfTq8" target="_blank">CHILL E.A.T Dining City</a>
         <a class="link" href="http://www.ciakconcept.com/" target="_blank">Website</a>
         <a class="link" href="https://ciakconcept.oddle.me/en_HK/" target="_blank">CIAK Concept eShop</a>
         <a class="link" href="https://ciakconcept.com/ciak-all-day-italian/" target="_blank">Menus</a>
